--- a/CSPS PUCPR/build.xml
+++ b/CSPS PUCPR/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Pilhas_e_filas_PUCPR" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Pilhas e filas PUCPR.</description>
+<project name="CSPS_PUCPR" default="default" basedir=".">
+    <description>Builds, tests, and runs the project CSPS PUCPR.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Pilhas_e_filas_PUCPR-impl.jar">
+        <target name="run" depends="CSPS_PUCPR-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
