--- a/CSPS PUCPR/nbproject/project.properties
+++ b/CSPS PUCPR/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Pilhas_e_filas_PUCPR.jar
+dist.jar=${dist.dir}/CSPS_PUCPR.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
