Changed project name to CSPS PUCPR, added stacks and queues based on Chained List.

--- a/CSPS PUCPR/nbproject/project.properties
+++ b/CSPS PUCPR/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pilhas.e.filas.pucpr.PilhasEFilasPUCPR
+main.class=cspspucpr.CSPSPUCPR
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
